// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies 1`] = `
<div>
  <div
    class="colA"
  >
    <h2>
      Movies 
    </h2>
    <ul>
      <li>
        <span>
          Hello
        </span>
         
        <i
          class="react-contextmenu-wrapper fas fa-list"
          style="cursor: pointer;"
        />
        <nav
          class="react-contextmenu"
          role="menu"
          style="position: fixed; opacity: 0; pointer-events: none;"
          tabindex="-1"
        >
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="unselectable"
            >
              Play in Plex
            </span>
          </div>
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            Open in IMDB
          </div>
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            Added by: 
            David
          </div>
        </nav>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`Progress complex 1`] = `<div />`;

exports[`Progress complex 2`] = `
<div>
  <progress
    title="50% (Unknown time remaining)"
    value="0.5"
  />
</div>
`;

exports[`Progress complex 3`] = `
<div>
  <progress
    title="75% (Unknown time remaining)"
    value="0.75"
  />
</div>
`;

exports[`Progress simple 1`] = `<div />`;

exports[`Progress simple 2`] = `
<div>
  <i
    class="fas fa-check-circle"
  />
</div>
`;

exports[`Progress simple 3`] = `
<div>
  <progress
    title="50% (6 minutes remaining)"
    value="0.5"
  />
</div>
`;

exports[`TVShows 1`] = `
<div>
  <div>
    <div
      class="colB"
    >
      <h2>
        TV Shows 
      </h2>
      <div>
        <h3>
          Title
           
          <i
            class="react-contextmenu-wrapper fas fa-list"
            style="cursor: pointer;"
          />
          <nav
            class="react-contextmenu"
            role="menu"
            style="position: fixed; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            
            <div
              aria-disabled="false"
              class="react-contextmenu-item"
              role="menuitem"
              tabindex="-1"
            >
              Search
            </div>
          </nav>
        </h3>
        <div
          class="Collapsible"
        >
          <span
            class="Collapsible__trigger is-open"
          >
            <h4>
              Season 
              1
               
               
              <a
                href="/select/1/season/1"
              >
                <i
                  class="fas fa-search"
                />
              </a>
            </h4>
          </span>
          <div
            class="Collapsible__contentOuter"
            style="height: auto; transition: none; overflow: hidden;"
          >
            <div
              class="Collapsible__contentInner"
            >
              <ol />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
